# Proj3Spotify

./: CMakeLists.txt  README.md  Read.me  algorithms.h  backend.h  main.cpp  trieTree.h
frontEnd/: index.html  style.css  temp.html
